--- a/WealthWise.UI/Layout/NavMenu.razor
+++ b/WealthWise.UI/Layout/NavMenu.razor
@@ -24,6 +24,11 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> PortfolioOverview
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="chat">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> AI Chat
+            </NavLink>
+        </div>
 
     </nav>
 </div>
