--- a/WealthWise.UI/Layout/NavMenu.razor
+++ b/WealthWise.UI/Layout/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">WealthWise-AI</a>
+        <a class="navbar-brand" href=""><img class="logo" style="height:50px; width:50px;" src="./WealthWiseLogo1.png" alt="Alternate Text" /></a> 
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -15,18 +15,18 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="financialAdvisor">
+            <NavLink class="nav-link" href="financial-advisor">
                 <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Financial Advisor
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="portfolio">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> PortfolioOverview
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Portfolio Overview
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="chat">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> AI Chat
+            <NavLink class="nav-link" href="financial-chat">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Financial Chat
             </NavLink>
         </div>
 
